feature: user endpoint filter
